--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" type="text/javascript"></script>
    <script src="https://d3js.org/d3.v4.min.js"></script>
    <div id = 'app-container'>
+   <div id="header"></div>
    <div id = 'root'></div>
+   
+   
+   
    <div id='legendPlayers'></div>
    </div>
   
