--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   <body>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" type="text/javascript"></script>
    <script src="https://d3js.org/d3.v4.min.js"></script>
+     <div id ="wrapperAuthor">
+ 	<div id="corp"> an <b>Independentviz.com</b> creation</div>   <div id="author"> by <a href="https://www.twitter.com/nathaniharris"><u> Nathan Harris</u></a> </div>
+</div>
    <div id = 'app-container'>
    <div id="header"></div>
+   
    <div id = 'root'></div>
    
    
