--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Interactive Minutes Played Chart 2016-2017 football soccer</title>
+        <meta name="twitter:card" content="summary_large_image">
+
+<meta name="twitter:site" content="@nathaniharris">
+<meta name="twitter:creator" content="@nathaniharris">
+<meta name="twitter:title" content="Minutes Played Per Player Chart">
+<meta name="twitter:description" content="An interactive Chart Showing Min Played per Player throught the 2017 season">
+<meta name="twitter:image" content="https://c1.staticflickr.com/5/4227/34633709811_af40958803_b.jpg">
+
+
+
+<!-- facebook meta tags -->
+<meta property="og:url"           content="https://nharrisanalyst.github.io/mcfc2017/" />
+  <meta property="og:type"          content="website" />
+  <meta property="og:title"         content="Minutes Played Per Player Chart" />
+  <meta property="og:description"   content="An interactive Chart Showing Min Played per Player throught the 2017 season" />
+  <meta property="og:image"         content="https://c1.staticflickr.com/5/4227/34633709811_af40958803_b.jpg" />
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   </head>
-  <body>
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" type="text/javascript"></script>
+  <body id ='body'>
+  <script src="https://platform.twitter.com/widgets.js"></script>
+ <!--  FaceBook Share Button -->
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+  
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" type="text/javascript"></script>
    <script src="https://d3js.org/d3.v4.min.js"></script>
      <div id ="wrapperAuthor">
  	<div id="corp"> an <b>Independentviz.com</b> creation</div>   <div id="author"> by <a href="https://www.twitter.com/nathaniharris"><u> Nathan Harris</u></a> </div>
@@ -21,6 +48,14 @@
    <div id='legendPlayers'></div>
    </div>
   
+   <div id='shareButtons'>
+   <div class="fb-share-button" data-href="https://nharrisanalyst.github.io/mcfc2017/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnharrisanalyst.github.io%2Fmcfc2017%2F&amp;src=sdkpreparse">Share</a></div>
+  <a class="twitter-share-button"
+  href="https://twitter.com/intent/tweet">
+Tweet</a>
+P.S. Hire Me Nharrisanalyst@gmail.com
+</div>
+
  <script src="mcfc.js" type="text/javascript"></script>
   </body>
 </html>
